2010-10-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S (grub_console_getkey): Fix incorrect
	handling of special keys.

2010-10-02  Aleš Nesrsta <starous@volny.cz>

	* include/grub/scsi.h (grub_make_scsi_id): Fix incorrect usgae of
	GRUB_SCSI_ID_BUS_SHIFT instead of GRUB_SCSI_ID_LUN_SHIFT.

2010-10-02  Aleš Nesrsta <starous@volny.cz>

	* grub-core/bus/usb/ohci.c (GRUB_OHCI_TDS): Increase.
	* grub-core/bus/usb/uhci.c (N_TD): New definition. All previous implicit
	users updated.
	* grub-core/bus/usb/usbtrans.c (grub_usb_bulk_setup_readwrite):
	Use right endpoint when querying descriptor.

2010-10-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Clear out 0x80 color bit on EFI.
	Tested by: decoder
	Reported by: decoder and meta tech.

	* grub-core/term/efi/console.c (grub_console_standard_color): Removed.
	(grub_console_setcolorstate): Clear out 0x80 bit.
	Use GRUB_TERM_DEFAULT_STANDARD_COLOR.
	(grub_console_output): Use GRUB_TERM_DEFAULT_NORMAL_COLOR.
	Use GRUB_TERM_DEFAULT_HIGHLIGHT_COLOR.

2010-10-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (DEFAULT_VIDEO_MODE) [GRUB_MACHINE_EFI]:
	Set to "auto".

2010-09-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gettext/gettext.c (grub_gettext_init_ext): Avoid using
	mo_file after freeing.

2010-09-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c (read_terminal_list): Free in a right order.

2010-09-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_execute_sourcecode): Set
	flags.

2010-09-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (main) [GRUB_MACHINE_IEEE1275]: Propagate argp
	usage.

2010-09-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Put terminfo into core on ieee1275 and yeeloong (needed for console).

	* gentpl.py: New groups terminfoinkernel and terminfomodule.
	* grub-core/Makefile.am (KERNEL_HEADER_FILES): Include extcmd.h, arg.h